--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 
-
-<!-- <app-cadastrar></app-cadastrar>
- <app-login></app-login> -->
-
+<!--
+<app-cadastrar></app-cadastrar>
+<app-login></app-login> -->
 <app-menu></app-menu>
 <router-outlet></router-outlet>
 <app-rodape></app-rodape>
