--- a/src/styles.css
+++ b/src/styles.css
@@ -86,3 +86,10 @@
 .input-style input:valid{
     border:1px solid #17a2b8;
 }
+
+.form-cadastro{
+    background-color: rgb(255, 255, 255);
+    padding: 50px 20px;
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px 5px rgba(167, 167, 167, 0.192);
+}
