--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,17 +23,17 @@
                     <h1 class="text-center mb-3">Entrar</h1>
 
                     <div class="input-style mb-4">
-                        <input type="text" name="usuario" required="required">
+                        <input [(ngModel)]="usuarioLogin.usuario" type="text" name="usuario" required="required">
                         <span>Usuário</span>
                     </div>
 
                     <div class="input-style mb-4">
-                        <input type="password" name="senha" required="required">
+                        <input [(ngModel)]="usuarioLogin.senha" type="password" name="senha" required="required">
                         <span>Senha</span>
                     </div>
 
                     <div class="d-flex justify-content-end">
-                        <button type="submit" class="btn btn-dark">Entrar</button>
+                        <button (click)="logar()" type="submit" class="btn btn-dark">Entrar</button>
                     </div>
 
                     <hr class="my-4">
