cadastrar/atualizar produtos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 
-<!--
-<app-cadastrar></app-cadastrar>
-<app-login></app-login> -->
+
+<!-- <app-cadastrar></app-cadastrar>
+<app-login></app-login>
+<router-outlet></router-outlet> -->
+
 <app-menu></app-menu>
-<router-outlet></router-outlet>
+<!-- <app-cadastrar-produto></app-cadastrar-produto> -->
+<!-- <app-atualizar-produto></app-atualizar-produto> -->
+<app-fundadores></app-fundadores>
 <app-rodape></app-rodape>
