Funções GET e POST de produtos implementadas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 
-
-<!-- <app-cadastrar></app-cadastrar>
-<app-login></app-login>
-<router-outlet></router-outlet> -->
-
 <app-menu></app-menu>
+<router-outlet></router-outlet>
+<app-rodape></app-rodape>
+
 <!-- <app-cadastrar-produto></app-cadastrar-produto> -->
 <!-- <app-atualizar-produto></app-atualizar-produto> -->
-<app-fundadores></app-fundadores>
-<app-rodape></app-rodape>
+<!-- <app-fundadores></app-fundadores> -->
+<!-- <app-cadastrar></app-cadastrar> -->
+<!-- <app-login></app-login> -->
+<!-- <app-home></app-home> -->
