--- a/src/app/cadastrar-produto/cadastrar-produto.component.html
+++ b/src/app/cadastrar-produto/cadastrar-produto.component.html
@@ -14,45 +14,25 @@
 
                 <div class="form-group">
                     <label for="exampleFormControlInput1">Nome do Produto*</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Seu produto">
+                    <input [(ngModel)]="produto.nomeProd" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Seu produto">
                 </div>
 
                 <div class="form-group">
                     <label for="exampleFormControlInput1">Preço*</label>
-                    <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="Preço">
+                    <input [(ngModel)]="produto.preco" type="number" class="form-control" id="exampleFormControlInput1" placeholder="Preço">
                 </div>
 
                 <div class="form-group">
                     <label for="exampleFormControlSelect1">Escolha uma Categoria:</label>
-                    <select class="form-control" id="exampleFormControlSelect1">
-                        <option>Escolha uma Categoria</option>
-                        <option>Acessórios</option>
-                        <option>Decoração</option>
-                        <option>Vestimentas</option>
-                        <option>Produtos de Beleza</option>
-                        <option>Papelária e Embalgens</option>
-                    </select>
-                </div>
 
-                <div class="form-group">
-                    <label for="exampleFormControlSelect1">Escolha um Tipo:</label>
-                    <select class="form-control" id="exampleFormControlSelect1">
-                        <option>Escolha um Tipo</option>
-                        <option>Sacolas Ecológicas</option>
-                        <option>Brindes</option>
-                        <option>Quadros artesanais</option>
-                        <option>Camisetas</option>
-                        <option>Bonés</option>
-                        <option>Sabonetes</option>
-                        <option>Cremes </option>
-                        <option>Cadernos</option>
-                        <option>Calendários</option>
+                    <select [(ngModel)]="idCategoria" (change)="findByIdCategoria()" class="form-control" id="exampleFormControlSelect1">
+                        <option *ngFor="let categoria of listaCategorias" value="{{categoria.id}}">{{categoria.nomeCat}}</option>
                     </select>
                 </div>
 
                 <div class="form-group">
                     <label for="exampleFormControlInput1">Link da Foto*</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Foto">
+                    <input [(ngModel)]="produto.foto" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Foto">
                 </div>
 
                 <div class="form-group">
@@ -66,7 +46,7 @@
 
             <div class="form-group">
                 <label for="exampleFormControlTextarea1">Escreva uma descrição bem legal do seu produto:</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="9"></textarea>
+                <textarea [(ngModel)]="produto.descricao" class="form-control" id="exampleFormControlTextarea1" rows="9"></textarea>
             </div>
 
             <div class="d-flex justify-content-center">
@@ -81,7 +61,7 @@
     <div class="row mt-3 mb-5">
         <div class="col-md-12">
             <button type="submit" class="mr-5 btn bgcor1">CANCELAR</button>
-            <button type="submit" class="btn bgcor">FINALIZAR CADASTRO</button>
+            <button (click)="postProduto()" type="submit" class="btn bgcor">FINALIZAR CADASTRO</button>
         </div>
     </div>
 </div>
