Put e delete de produtos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 
 <app-menu></app-menu>
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
 <!-- <app-cadastrar-categoria></app-cadastrar-categoria> -->
 <!-- <app-fundadores></app-fundadores> -->
 <!-- <app-atualizar-categoria></app-atualizar-categoria> -->
 <!-- <app-deletar-produto></app-deletar-produto> -->
 <!-- <app-deletar-categoria></app-deletar-categoria> -->
-<app-atualizar-produto></app-atualizar-produto>
+<!-- <app-atualizar-produto></app-atualizar-produto> -->
 <app-rodape></app-rodape>
 
 <!-- <app-cadastrar-produto></app-cadastrar-produto> -->
