--- a/src/app/atualizar-produto/atualizar-produto.component.html
+++ b/src/app/atualizar-produto/atualizar-produto.component.html
@@ -24,9 +24,8 @@
 
                 <div class="form-group">
                     <label for="exampleFormControlSelect1">Escolha uma Categoria:</label>
-                    <select class="form-control" id="exampleFormControlSelect1">
-                        <option *ngFor = "let categoria of listaCategoria" >{{categoria.nomeCat}}</option>
-                        
+                    <select [(ngModel)]="idCategoria" (change)="findByIdCategoria()" class="form-control" id="exampleFormControlSelect1">
+                        <option *ngFor="let categoria of listaCategorias" value="{{categoria.id}}">{{categoria.nomeCat}}</option>
                     </select>
                 </div>
 
@@ -60,7 +59,7 @@
 <div class="container d-flex justify-content-center">
     <div class="row mt-3 mb-5">
         <div class="col-md-12">
-            <button type="submit" class="mr-5 btn bgcor1">CANCELAR</button>
+            <button [routerLink]= "['/produto']"type="submit" class="mr-5 btn bgcor1">CANCELAR</button>
             <button (click)="atualizar()" type="submit" class="btn bgcor">SALVAR ATUALIZAÇÃO</button>
         </div>
     </div>
