--- a/src/app/cadastrar-produto/cadastrar-produto.component.html
+++ b/src/app/cadastrar-produto/cadastrar-produto.component.html
@@ -60,7 +60,7 @@
 <div class="container d-flex justify-content-center">
     <div class="row mt-3 mb-5">
         <div class="col-md-12">
-            <button type="submit" class="mr-5 btn bgcor1">CANCELAR</button>
+            <button [routerLink]="['/produto']" type="submit" class="mr-5 btn bgcor1">CANCELAR</button>
             <button (click)="postProduto()" type="submit" class="btn bgcor">FINALIZAR CADASTRO</button>
         </div>
     </div>
