--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,23 +1,14 @@
 .img-bg {
-    background-image: url('https://i.imgur.com/4dBMMCi.jpg');
-    height: 750px;
+    background-image: url('https://i.imgur.com/ThKNvGT.png');
+    min-height: 600px;
     background-position: center;
-    background-repeat: no-repeat;
     background-size: cover;
-    border-radius: 15px;
     box-shadow: 5px 5px 5px 5px rgba(41, 41, 41, 0.192);
 
 }
 
-.background-page {
-    background-color: rgb(221, 221, 129);
-}
-
-
 .texture{
-    background-image: url('https://i.imgur.com/UZTMHpX.png%27');
+    background-image: url('https://i.imgur.com/SkRQkCO.png');
     min-height: 100vh;
-    background-position: center;
-    background-repeat: no-repeat;
     background-size: cover;
 }
