--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,52 +1,51 @@
-<div class="container-fluid background-page">
+<div class="container-fluid background-page texture">
 
-    <div class="row d-flex align-items-center">
+    <div class="row d-flex align-items-center"> 
 
         <div class="col-md-1"></div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 mt-4 ">
             <div class="row d-flex justify-content-center">
-                <div class="col-md-11 img-bg">
+                <div class="col-md-10 img-bg">
 
                 </div>
             </div>
 
         </div>
 
-        <div class="col-md-2 texture"></div>
-
-        <div class="col-md-4">
+        <div class="card container-fluid col-md-4 mt-3">
             
             <div class="row d-flex justify-content-center">
-                <div class="col-md-11 form-cadastro" id="media-size">
+                <div class="col-md-6 form-cadastro" id="media-size">
 
-                    <h1 class="text-center mb-3">Entrar</h1>
+                    <h1 class="mb-6 text-center mb-6">Entrar</h1>
 
-                    <div class="input-style mb-4">
-                        <input [(ngModel)]="usuarioLogin.usuario" type="text" name="usuario" required="required">
+                    <div class="mb-3">
                         <span>Usuário</span>
+                        <input [(ngModel)]="usuarioLogin.usuario" type="text" name="usuario" required="required">
+                        
                     </div>
 
-                    <div class="input-style mb-4">
-                        <input [(ngModel)]="usuarioLogin.senha" type="password" name="senha" required="required">
+                    <div class="mb-3">
                         <span>Senha</span>
+                        <input [(ngModel)]="usuarioLogin.senha" type="password" name="senha" required="required">
+                        
                     </div>
 
-                    <div class="d-flex justify-content-end">
-                        <button (click)="logar()" type="submit" class="btn btn-dark">Entrar</button>
+                    <div class="d-flex justify-content-center">
+                        <button (click)="logar()" type="submit" class="btn btn-success">Entrar</button>
                     </div>
 
-                    <hr class="my-4">
+                    <hr class="my-3">
 
                     <p class="text-center">
                         Não tem uma conta? <a routerLink="/cadastrar">Cadastre-se</a>
+                        
                     </p>
                 </div>
             </div>
 
         </div>
-
-        <div class="col-md-1 texture"></div>
-
+        
     </div>
 </div>
