--- a/src/app/fundadores/fundadores.component.html
+++ b/src/app/fundadores/fundadores.component.html
@@ -32,7 +32,7 @@
                     </li>
 
                     <li>
-                        <a href="https://github.com/JulianaR23" target="_blank">
+                        <a href="https://github.com/BetinaMachado" target="_blank">
                             <i class="bi bi-github icon "></i>
                         </a>
                     </li>
@@ -65,7 +65,7 @@
                     </li>
 
                     <li>
-                        <a href="https://github.com/JulianaR23" target="_blank">
+                        <a href="https://github.com/FelipeLopesMarques" target="_blank">
                             <i class="bi bi-github icon "></i>
                         </a>
                     </li>
@@ -139,7 +139,7 @@
                     </li>
 
                     <li>
-                        <a href="https://github.com/JulianaR23" target="_blank">
+                        <a href="https://github.com/LuizFabiodoCarmo" target="_blank">
                             <i class="bi bi-github icon "></i>
                         </a>
                     </li>
@@ -172,7 +172,7 @@
                     </li>
 
                     <li>
-                        <a href="https://github.com/JulianaR23" target="_blank">
+                        <a href="https://github.com/TaisBritoCosta" target="_blank">
                             <i class="bi bi-github icon "></i>
                         </a>
                     </li>
@@ -205,7 +205,7 @@
                     </li>
 
                     <li>
-                        <a href="https://github.com/JulianaR23" target="_blank">
+                        <a href="https://github.com/ThiagooFonseca" target="_blank">
                             <i class="bi bi-github icon "></i>
                         </a>
                     </li>
@@ -246,7 +246,7 @@
                     </li>
 
                     <li>
-                        <a href="https://github.com/JulianaR23" target="_blank">
+                        <a href="https://github.com/Vinicius-bmuniz" target="_blank">
                             <i class="bi bi-github icon "></i>
                         </a>
                     </li>
