--- a/src/app/produtos/produtos.component.html
+++ b/src/app/produtos/produtos.component.html
@@ -98,31 +98,29 @@
 
         <div class="col-md-9">
 
-            <div class="container-fluid my-3">
-                <div class="px-lg-0">
-                    <div class="row">
-                        <!-- Gallery item -->
-                        <div *ngFor="let produto of listaProdutos" class="col-xl-3 col-lg-4 col-md-6 mb-2">
+            <div class="row">
 
-                            <div class="bg-white rounded shadow-sm">
+                <!-- Gallery item -->
+                <div *ngFor="let produto of listaProdutos | paginate: { itemsPerPage: 4, currentPage: p }"
+                    class="col-md-4 mb-2">
 
-                                <img src="{{produto.foto}}" alt="" class="img-fluid" height="250px" width="250px">
+                    <div class="bg-white shadow-sm">
+                        <img src="{{produto.foto}}" alt="" class="img-fluid">
 
-                                <div class="p-2">
-                                    <h5> <a href="#" class="text-dark">{{produto.nomeProd}}</a></h5>
-                                    <p class="small text-muted mb-0">{{produto.descricao}}</p>
+                        <div class="p-2">
+                            <h5> <a href="#" class="text-dark d-flex justify-content-center">{{produto.nomeProd}}</a>
+                            </h5>
+                            <p class="small text-muted mb-0 d-flex justify-content-center">{{produto.descricao}}</p>
 
-                                    <div class="d-flex align-items-center justify-content-center rounded-pill bg-light px-3 py-2 mt-2">
-
-                                        <div class="badge badge-danger px-3 rounded-pill font-weight-normal">Comprar</div>
-
-                                    </div>
-                                </div>
+                            <div class="d-flex align-items-center justify-content-center px-3 py-2 mt-2">
+                                <button class="btn btn-block btn-dark">Comprar</button>
                             </div>
                         </div>
-                        <!-- End -->
-
                     </div>
-
                 </div>
+                <!-- End -->
             </div>
+
+        </div>
+    </div>
+</div>
