--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,32 +1,32 @@
-<div class="container-fluid background-page texture">
+<div class="container-fluid background-page texture my-3">
 
     <div class="row d-flex align-items-center"> 
 
         <div class="col-md-1"></div>
 
-        <div class="col-md-4 mt-4 ">
+        <div class="col-md-4 mt-4">
             <div class="row d-flex justify-content-center">
-                <div class="col-md-10 img-bg">
+                <div class="col-md-10 img-bg ml-5">
 
                 </div>
             </div>
 
         </div>
 
-        <div class="card container-fluid col-md-4 mt-3">
+        <div class="card container-fluid col-md-4 mt-2 ">
             
-            <div class="row d-flex justify-content-center">
-                <div class="col-md-6 form-cadastro" id="media-size">
+            <div class="row d-flex justify-content-center ">
+                <div class="col-md-6 " id="media">
 
-                    <h1 class="mb-6 text-center mb-6">Entrar</h1>
+                    <h1 class="mb-3 text-center mt-3 mb-3">Entrar</h1>
 
-                    <div class="mb-3">
+                    <div class="input-style-l mb-4">
                         <span>Usuário</span>
                         <input [(ngModel)]="usuarioLogin.usuario" type="text" name="usuario" required="required">
                         
                     </div>
 
-                    <div class="mb-3">
+                    <div class="input-style-l mb-5">
                         <span>Senha</span>
                         <input [(ngModel)]="usuarioLogin.senha" type="password" name="senha" required="required">
                         
@@ -36,7 +36,7 @@
                         <button (click)="logar()" type="submit" class="btn btn-success">Entrar</button>
                     </div>
 
-                    <hr class="my-3">
+                    <hr class="my-3 mb-4">
 
                     <p class="text-center">
                         Não tem uma conta? <a routerLink="/cadastrar">Cadastre-se</a>
