--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -44,7 +44,7 @@
     </ul>
     <form class="form-inline my-2 my-lg-0 d-flex justify-center">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0 mr-4" type="submit">Search</button>
+      <button class="btn btn-outline-light my-2 my-sm-0 mr-4" type="submit">Search</button>
     </form>
   </div>
   <div><a class="btn btn-outline-light btn-floating m-1" href=""
