--- a/src/app/produtos/produtos.component.css
+++ b/src/app/produtos/produtos.component.css
@@ -1,28 +1,15 @@
-.back-product {
-    height: 70vh;
-    width: 100vw;
-    background-color: aquamarine;
-}
-
 .titulo-pg {
     height: 50vh;
 }
 
-.img-bg {
-    background-image: url('https://i.imgur.com/4dBMMCi.jpghttps://i.imgur.com/4aj0gf9.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    box-shadow: 5px 5px 5px 5px rgba(41, 41, 41, 0.192);
-
-}
 
 .titulo-filtro {
-    color: rgb(255, 123, 0);
+    color: #366A55;
 }
 
-.linhas-titulo {
-    background-color: rgb(255, 123, 0);
+.linhas-titulo,
+.btn-edit {
+    background-color: #366A55;
 }
 
 
@@ -31,3 +18,59 @@
     color: rgb(153, 153, 153);
 }
 
+.ponteiro:hover {
+    cursor: pointer;
+    user-select: none;
+    background-color: #2c5746;
+}
+
+.pagination-orientation {
+    display: block;
+    align-items: flex-end !important;
+    align-content: flex-end !important;
+}
+
+.pagination-align{
+    display: flex;
+    align-items: flex-end !important;
+    align-content: flex-end !important;
+    align-items: center;
+    align-content: center;
+    align-self: center;
+}
+
+
+
+
+/* BARRA DE ROLAGEM PERSONALIZADA */
+.rolagem {
+    height: 15vh;
+    overflow-y: scroll;
+}
+
+/* Largura da barra de rolagem */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Fundo da barra de rolagem */
+::-webkit-scrollbar-track-piece {
+    background-color: #dfdfdfa8;
+    /* border-right: 1px solid #f1b11ce5; */
+    border-radius: 20px;
+}
+
+/* Cor do indicador de rolagem */
+::-webkit-scrollbar-thumb:vertical,
+::-webkit-scrollbar-thumb:horizontal {
+    background-color: #366A55;
+    border-radius: 20px;
+}
+
+/* Cor do indicador de rolagem - ao passar o mouse */
+::-webkit-scrollbar-thumb:vertical:hover,
+::-webkit-scrollbar-thumb:horizontal:hover {
+    background-color: #2c5746;
+    border-radius: 20px;
+}
+/* FIM */
