--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,127 +1,101 @@
-
 <!-- Footer -->
-<footer class="text-center text-lg-start footcolor text-dark">
+<footer class="text-center text-lg-start footcolor text-body ">
+  <!-- Section: Social media -->
+  <div class="d-flex justify-content-center">
     <!-- Section: Social media -->
-    <section
-      class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
-    >
-      <!-- Left -->
-      <div class="me-5 d-none d-lg-block">
-        <span>Get connected with us on social networks:</span>
-      </div>
-      <!-- Left -->
-  
-      <!-- Right -->
-      <div>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-google"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-github"></i>
-        </a>
-      </div>
-      <!-- Right -->
-    </section>
-    <!-- Section: Social media -->
-  
+
     <!-- Section: Links  -->
     <section class="">
       <div class="container text-center text-md-start mt-5">
         <!-- Grid row -->
         <div class="row mt-3">
           <!-- Grid column -->
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+
+          <div class="col-md-2 ">
+            <img src="https://i.imgur.com/O6G5AQ6.png " alt="" width="100%">
+          </div>
+
+          <div class="col-md-2 col-lg-4 col-xl-3 mx-auto mb-4">
             <!-- Content -->
             <h6 class="text-uppercase fw-bold mb-4">
-              <i class="fas fa-gem me-3"></i>Company name
+              <i class="fas fa-gem me-3"></i>ECO-mmerce
             </h6>
             <p>
-              Here you can use rows and columns to organize your footer content. Lorem ipsum
-              dolor sit amet, consectetur adipisicing elit.
+              O ECO-mmerce tem como objetivo ser uma referência de plataforma para ajudar ONGs a venderem seus produtos
+              e assim contribuir com a erradicação da fome
             </p>
           </div>
           <!-- Grid column -->
-  
+
           <!-- Grid column -->
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
-              Products
+              Conta
             </h6>
             <p>
-              <a href="#!" class="text-reset">Angular</a>
+              <a href="#!" class="text-reset" [routerLink]="['/login']">Entrar</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">React</a>
+              <a href="#!" class="text-reset" [routerLink]="['/cadastrar']">Cadastrar</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Vue</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Laravel</a>
+              <a href="#!" class="text-reset" [routerLink]="['/produtos']">Produtos</a>
             </p>
           </div>
           <!-- Grid column -->
-  
+
           <!-- Grid column -->
-          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
-              Useful links
+              Institucional
             </h6>
             <p>
-              <a href="#!" class="text-reset">Pricing</a>
+              <a href="#!" class="text-reset" [routerLink]="['/home']">Missão, Visão e Valores</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Settings</a>
+              <a href="#!" class="text-reset" [routerLink]="['/home']">Como Funciona</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Orders</a>
+              <a href="#!" class="text-reset" [routerLink]="['/ongs']">ONGs</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Help</a>
+              <a href="#!" class="text-reset" [routerLink]="['/fundadores']">Nosso Time</a>
             </p>
           </div>
           <!-- Grid column -->
-  
+
           <!-- Grid column -->
-          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <div class="col-md-2 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
-              Contact
+              Contato
             </h6>
-            <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+            <p><i class=" me-3"></i> São Paulo, São Paulo - BR</p>
             <p>
-              <i class="fas fa-envelope me-3"></i>
-              info@example.com
+              <i class=" me-3"></i>
+              grupo6generation@gmail.com
             </p>
-            <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-            <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+            <a href="https://github.com/ECO-mmerce-Organization" class="me-4 text-reset size" target="_blank">
+              <i class="bi bi-github cor"></i>
+            </a>
+
+
           </div>
           <!-- Grid column -->
         </div>
         <!-- Grid row -->
       </div>
     </section>
-    <!-- Section: Links  -->
-  
-    <!-- Copyright -->
-    <div class="text-center  p-4" style="background-color: #98BEA3;">
-      © 2021 Copyright:
-      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-    </div>
-    <!-- Copyright -->
-  </footer>
-  <!-- Footer -->
+  </div>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div class="text-center  p-4 text-white" style="background-color: #98BEA3;">
+    © 2022 Copyright:
+    <a class="text-reset fw-bold" href="">ECO-mmerce</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
