Filtro por preço adicionado

--- a/src/app/produtos/produtos.component.html
+++ b/src/app/produtos/produtos.component.html
@@ -44,6 +44,9 @@
                             <input type="range" class="form-control-range" id="formControlRange">
                             <label class="d-flex justify-content-end text-range" for="rangeInput">preço R$ VarMin - R$
                                 max</label>
+                            <input type="text" class="form-control" [(ngModel)]="precoFinal">
+                            <button class="btn btn-dark" (click)="findProdutosByPreco()">PRECO</button>
+                            <button class="btn btn-dark" (click)="getAllProdutos()">Limpar</button>
                         </div>
                     </form>
 
@@ -108,7 +111,7 @@
                             <div class="row d-flex align-content-center">
                                 <!-- Gallery item -->
 
-                                <div *ngFor="let produto of listaProdutos | paginate: { itemsPerPage: 10, currentPage: p }"
+                                <div *ngFor="let produto of listaProdutos | paginate: { itemsPerPage: 2, currentPage: p }"
                                     class="col-md-4 mb-2">
 
                                     <div class="bg-white rounded shadow-sm">
